# touchpad

./: .gitignore  .gitmodules  README.md  Session.vim  bootstrap.bat  bootstrap.sh  build.bat  build.sh  go.mod  run.sh  server.go
driver/: CMakeLists.txt  driver.c  driver.h  driver_linux.c  driver_windows.c  meson.build
frontend/: main.c  meson.build  qrcodegen.c  qrcodegen.h
server/: go.mod  go.sum  main.go  server.go  touchpad.postman_collection.json
server/security/: challenge.go  challenge_test.go  keystore.go  session.go  token.go
server/server/: auth.go  embedfileserver.go  fileserver.go  logger.go
server/util/: net.go
static/: echo.html  package-lock.json  package.json  touchpad.css  touchpad.html  touchpad.js  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
static/assets/: settings_icon.xcf
static/src/: .eslintrc  ControllerOverlay.js  Overlay.js  TouchpadOverlay.js  TransparentOverlay.js  index.js
